feat: add method-override and add edit feature

--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -40,8 +40,8 @@
 
       <div class="row actions justify-content-end mb-3 mr-2">
         <a class="btn mr-1 btn-info" href="/">Home</a>
-        <a class="btn mr-1 btn-secondary" href="/restaurants/{{this._id}}/edit">Edit</a>
-        <a class="btn mr-1 btn-danger" href="/restaurants/{{this._id}}/delete">Delete</a>
+        <a class="btn mr-1 btn-secondary" href="/restaurants/{{restaurant._id}}/edit">Edit</a>
+        <a class="btn mr-1 btn-danger" href="/restaurants/{{restaurant._id}}/delete">Delete</a>
       </div>
     </div>
   </div>
