--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@
 
           
         <div class="card mb-3">
-          <a href="/restaurants/{{this._id}}" class="text-secondary">
+          <a href="/restaurants/{{this._id}}/detail" class="text-secondary">
             <img class="card-img-top" src="{{this.image}}"
               alt="{{this.name}}">
             <div class="card-body p-3">
