--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,11 +2,11 @@
 <div class="container search-bar">
   <div class="search-bar-outer">
     <div class="search-bar-inner">
-      <form action="/restaurants/search">
+      <form action="/search">
         <h4 class="mb-2">尋找餐廳：</h4>
         <div class="input-group">
-          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
-            value="{{keyword}}" aria-describedby="search-button">
+          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..." value="{{keyword}}"
+            aria-describedby="search-button">
           <div class="input-group-append">
             <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
           </div>
@@ -22,7 +22,23 @@
 </div>
 
 <!-- restaurant list -->
-<div class="container mt-5">
+<div class="container mt-4">
+  <div class="row justify-content-end mr-5 mb-3">
+    <div class="dropdown mr-4">
+      <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+        排序
+        {{#if sort}}
+        ({{sort}})
+        {{/if}}
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="/search?sort=asc">A &#10141; Z</a>
+        <a class="dropdown-item" href="/search?sort=desc">Z &#10141; A</a>
+        <a class="dropdown-item" href="/search?sort=category">餐廳類別</a>
+        <a class="dropdown-item" href="/search?sort=location">區域</a>
+      </div>
+    </div>
+  </div>
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
@@ -30,11 +46,10 @@
         <!-- Restaurants will be shown here -->
         {{#each restaurants}}
 
-          
+
         <div class="card mb-3">
           <a href="/restaurants/{{this._id}}/detail" class="text-secondary">
-            <img class="card-img-top" src="{{this.image}}"
-              alt="{{this.name}}">
+            <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
             <div class="card-body p-3">
               <h6 class="card-title mb-1">{{this.name}}</h6>
               <div class="restaurant-category mb-1">
@@ -45,7 +60,7 @@
                 <i class="fas fa-star fa-xs"></i>
               </span>
             </div>
-          </a>  
+          </a>
 
           <div class="row actions justify-content-end mb-3 mr-2">
             <a class="btn btn-sm mr-1 btn-secondary" href="/restaurants/{{this._id}}/edit">Edit</a>
@@ -57,7 +72,7 @@
 
 
         {{/each}}
-        
+
       </div>
     </div>
   </div>
