--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,10 @@
-/* ----- Header settings ----- */
+body {
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
+}
 
+/* ----- Header settings ----- */
 header {
   overflow: hidden;
 }
@@ -83,11 +88,6 @@ header {
   font-size: 3rem;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-
-/* ----- Show page settings ----- */
-
-
-
 
 /* ----- media queries ----- */
 @media screen and (max-width: 992px) {
